# USURTTimetableTelegramBot

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.py  setup.cfg
app/: bot.py  root.py  web_parser.py
app/bot/: bot.py
app/parser/: parser.py
